PatitoParserParser.js
// Generated from PatitoParser.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import PatitoParserListener from './PatitoParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class PatitoParserParser extends antlr4.Parser {

    static grammarFileName = "PatitoParser.g4";
    static literalNames = [ null, "'programa'", "'vars'", "'entero'", "'flotante'", 
                            "'nula'", "'si'", "'sino'", "'mientras'", "'haz'", 
                            "'inicio'", "'fin'", null, null, "'escribe'", 
                            null, null, "';'", "':'", "','", "'('", "')'", 
                            "'{'", "'}'", "'='", "'>'", "'<'", "'!='", "'=='", 
                            "'+'", "'-'", "'*'", "'/'" ];
    static symbolicNames = [ null, "PROGRAM", "VARS", "ENTERO", "FLOTANTE", 
                             "NULA", "SI", "SINO", "MIENTRAS", "HAZ", "INICIO", 
                             "FIN", "CTE_ENT", "CTE_FLOT", "ESCRIBE", "ID", 
                             "LETRERO", "SEMICOLON", "COLON", "COMMA", "LPAR", 
                             "RPAR", "LBRACE", "RBRACE", "ASSIGN", "GT", 
                             "LT", "NEQ", "EQ", "PLUS", "MINUS", "MULT", 
                             "DIV", "WS" ];
    static ruleNames = [ "programa", "tiene_vars", "vars", "mas_vars", "lista_vars", 
                         "lista_ids", "mas_ids", "lista_funcs", "funcs", 
                         "lista_params", "mas_params", "param", "tipo", 
                         "cuerpo", "lista_estatutos", "estatuto", "asigna", 
                         "condicion", "sino", "ciclo", "llamada", "lista_expresiones", 
                         "mas_expresiones", "imprime", "lista_impresiones", 
                         "mas_impresiones", "imprimibles", "expresion", 
                         "comparador", "exp", "operaciones_signo", "termino", 
                         "operaciones_factor", "factor", "operadores_signo", 
                         "operandos_factor", "cte" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = PatitoParserParser.ruleNames;
        this.literalNames = PatitoParserParser.literalNames;
        this.symbolicNames = PatitoParserParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, PatitoParserParser.RULE_programa);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        localctx._PROGRAM = this.match(PatitoParserParser.PROGRAM);
	        this.state = 75;
	        this.match(PatitoParserParser.ID);
	         
	        		// Sematic action #1.1
	        		this.currType = (localctx._PROGRAM == null ? null : localctx._PROGRAM.text);
	        		this.currFunc = 'global';
	        		this.FunctionDir.addFunction(this.currFunc, this.currType);
	        	
	        this.state = 77;
	        this.match(PatitoParserParser.SEMICOLON);
	        this.state = 78;
	        this.tiene_vars();
	        this.state = 79;
	        this.lista_funcs();
	        this.state = 80;
	        this.match(PatitoParserParser.INICIO);
	        this.state = 81;
	        this.cuerpo();
	        this.state = 82;
	        this.match(PatitoParserParser.FIN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tiene_vars() {
	    let localctx = new Tiene_varsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, PatitoParserParser.RULE_tiene_vars);
	    try {
	        this.state = 86;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 84;
	            this.vars();
	            break;
	        case 5:
	        case 10:
	        case 22:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vars() {
	    let localctx = new VarsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, PatitoParserParser.RULE_vars);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(PatitoParserParser.VARS);
	        this.state = 89;
	        this.lista_vars();
	        this.state = 90;
	        this.mas_vars();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mas_vars() {
	    let localctx = new Mas_varsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, PatitoParserParser.RULE_mas_vars);
	    try {
	        this.state = 94;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 92;
	            this.lista_vars();
	            break;
	        case 5:
	        case 10:
	        case 22:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_vars() {
	    let localctx = new Lista_varsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, PatitoParserParser.RULE_lista_vars);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        localctx._lista_ids = this.lista_ids();
	        this.state = 97;
	        this.match(PatitoParserParser.COLON);
	        this.state = 98;
	        localctx._tipo = this.tipo();

	        		// Semantic action #1.2
	        		this.currType = (localctx._tipo == null ? null : this._input.getText(new antlr4.Interval(localctx._tipo.start,localctx._tipo.stop)));
	        		let var_list = (localctx._lista_ids == null ? null : this._input.getText(new antlr4.Interval(localctx._lista_ids.start,localctx._lista_ids.stop)));
	        		let var_list_array = var_list.split(",");
	        		var_list_array.forEach((_var) => {
	        			this.FunctionDir.addVar(_var, this.currType, this.currFunc);
	        		});
	        	
	        this.state = 100;
	        this.match(PatitoParserParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_ids() {
	    let localctx = new Lista_idsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, PatitoParserParser.RULE_lista_ids);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.match(PatitoParserParser.ID);
	        this.state = 103;
	        this.mas_ids();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mas_ids() {
	    let localctx = new Mas_idsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, PatitoParserParser.RULE_mas_ids);
	    try {
	        this.state = 109;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 105;
	            this.match(PatitoParserParser.COMMA);
	            this.state = 106;
	            this.match(PatitoParserParser.ID);
	            this.state = 107;
	            this.mas_ids();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_funcs() {
	    let localctx = new Lista_funcsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, PatitoParserParser.RULE_lista_funcs);
	    try {
	        this.state = 115;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 111;
	            this.funcs();
	            this.state = 112;
	            this.lista_funcs();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcs() {
	    let localctx = new FuncsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, PatitoParserParser.RULE_funcs);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        localctx._NULA = this.match(PatitoParserParser.NULA);
	        this.state = 118;
	        localctx._ID = this.match(PatitoParserParser.ID);

	        		// Semantic action #1.3
	        		this.currType = (localctx._NULA == null ? null : localctx._NULA.text);
	        		this.currFunc = (localctx._ID == null ? null : localctx._ID.text);

	        		if(this.FunctionDir.hasFunction(this.currFunc)){
	        			console.error(`La función ${this.currFunc} ya está definida`);
	        		}

	        		this.FunctionDir.addFunction(this.currFunc, this.currType);
	        	
	        this.state = 120;
	        this.match(PatitoParserParser.LPAR);
	        this.state = 121;
	        this.lista_params();
	        this.state = 122;
	        this.match(PatitoParserParser.RPAR);
	        this.state = 123;
	        this.match(PatitoParserParser.LBRACE);
	        this.state = 124;
	        this.tiene_vars();
	        this.state = 125;
	        this.cuerpo();
	        this.state = 126;
	        this.match(PatitoParserParser.RBRACE);
	        this.state = 127;
	        this.match(PatitoParserParser.SEMICOLON);
	        this.currFunc = 'global'
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_params() {
	    let localctx = new Lista_paramsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, PatitoParserParser.RULE_lista_params);
	    try {
	        this.state = 134;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 130;
	            this.param();
	            this.state = 131;
	            this.mas_params();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mas_params() {
	    let localctx = new Mas_paramsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, PatitoParserParser.RULE_mas_params);
	    try {
	        this.state = 141;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 136;
	            this.match(PatitoParserParser.COMMA);
	            this.state = 137;
	            this.param();
	            this.state = 138;
	            this.mas_params();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	param() {
	    let localctx = new ParamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, PatitoParserParser.RULE_param);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        localctx._ID = this.match(PatitoParserParser.ID);
	        this.state = 144;
	        this.match(PatitoParserParser.COLON);
	        this.state = 145;
	        localctx._tipo = this.tipo();
	         
	        		// Semantic action #1.4
	        		this.currType = (localctx._tipo == null ? null : this._input.getText(new antlr4.Interval(localctx._tipo.start,localctx._tipo.stop)));
	        		this.currVar = (localctx._ID == null ? null : localctx._ID.text);
	        		if(this.FunctionDir.hasVariable(this.currFunc, this.currVar)){
	        			console.error(`La función ${this.currVar} ya está definida`);
	        		}
	        		else {
	        			this.FunctionDir.addVar(this.currVar, this.currType, this.currFunc)
	        		}
	        	
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo() {
	    let localctx = new TipoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, PatitoParserParser.RULE_tipo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        _la = this._input.LA(1);
	        if(!(_la===3 || _la===4)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cuerpo() {
	    let localctx = new CuerpoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, PatitoParserParser.RULE_cuerpo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this.match(PatitoParserParser.LBRACE);
	        this.state = 151;
	        this.lista_estatutos();
	        this.state = 152;
	        this.match(PatitoParserParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_estatutos() {
	    let localctx = new Lista_estatutosContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, PatitoParserParser.RULE_lista_estatutos);
	    try {
	        this.state = 158;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	        case 8:
	        case 14:
	        case 15:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 154;
	            this.estatuto();
	            this.state = 155;
	            this.lista_estatutos();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 2);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	estatuto() {
	    let localctx = new EstatutoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, PatitoParserParser.RULE_estatuto);
	    try {
	        this.state = 165;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 160;
	            this.asigna();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 161;
	            this.condicion();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 162;
	            this.ciclo();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 163;
	            this.llamada();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 164;
	            this.imprime();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	asigna() {
	    let localctx = new AsignaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, PatitoParserParser.RULE_asigna);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        localctx._ID = this.match(PatitoParserParser.ID);

	        		// Semantic action #2.1
	        		this.currVar = (localctx._ID == null ? null : localctx._ID.text);
	        		this.OperandStack.push(this.FunctionDir.functions[this.currFunc].variables[this.currVar]);
	        	
	        this.state = 169;
	        localctx._ASSIGN = this.match(PatitoParserParser.ASSIGN);

	        		// Semantic action #2.2
	        		this.OperatorStack.push((localctx._ASSIGN == null ? null : localctx._ASSIGN.text))
	        	
	        this.state = 171;
	        this.expresion();

	        		// Semantic action #2.12
	        		if(this.OperatorStack.top() == '=' ){
	        			let leftOperand = this.OperandStack.pop();
	        			let resultVariable =  this.OperandStack.pop();
	        			let operator = this.OperatorStack.pop();
	        			this.QuadruplesQueue.addQuadruple(this.SematicCube[operator]['code'], leftOperand, null, resultVariable);
	        		}
	        	
	        this.state = 173;
	        this.match(PatitoParserParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condicion() {
	    let localctx = new CondicionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, PatitoParserParser.RULE_condicion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(PatitoParserParser.SI);
	        this.state = 176;
	        this.match(PatitoParserParser.LPAR);
	        this.state = 177;
	        this.expresion();
	        this.state = 178;
	        this.match(PatitoParserParser.RPAR);
